# GLM-CFD-Benchmark

./: .dvcignore  .gitattributes  .gitignore  LICENSE  README.md  dvc.yaml  gallery.html  pyproject.toml  showcase.html
.dvc/: config
.workbuddy/memory/: 2026-06-16.md  2026-06-17.md  MEMORY.md
agentbench/balanced_brackets/: contract.json  ledger.jsonl
agentbench/csv_field_extract/: contract.json  ledger.jsonl
agentbench/csv_field_splitter/: contract.json  ledger.jsonl
agentbench/ini_to_json/: contract.json  ledger.jsonl
agentbench/kth_largest/: contract.json  ledger.jsonl
agentbench/lid_driven_cavity/: contract.json  ledger.jsonl
agentbench/merge_intervals/: contract.json  ledger.jsonl
agentbench/roman_to_int/: contract.json  ledger.jsonl
agentbench/smoke_add_two/: contract.json  ledger.jsonl
agentbench/smoke_add_two_io/: contract.json  ledger.jsonl
baselines/: baselines.json
deliverables/software-company/: p2c-delivery-2026-06-16.md
docs/: class-diagram.mermaid  sequence-diagram.mermaid
docs/architecture/: Architecture-v1.1-P1a-dryrun.md  Architecture-v1.2-P1b-real.md  Architecture-v1.md  Architecture-v2.0-P2a.md  Architecture-v2.1-P2b.md  Architecture-v2.2-P2c.md  Architecture-v3.0-P3hotfix.md  Architecture-v4.0-trust-platform.md  Architecture-v5.0-multi-domain.md  class-diagram-v1.2.mermaid  class-diagram.mermaid  sequence-diagram-v1.2.mermaid  sequence-diagram.mermaid
docs/prd/: PRD-v1.1-P1a-dryrun.md  PRD-v1.2-P1b-real.md  PRD-v1.md  PRD-v2.0-P2-roadmap.md  PRD-v2.1-P2b.md  PRD-v2.2-P2c.md  PRD-v3.0-P3hotfix.md
failures/: library.json
runs/20260615T192754Z_mock_success_generic_5a5f831f/: manifest.json  metrics.json  report.html  run.sh
runs/20260615T192801Z_mock_failure_generic_dd218e78/: manifest.json  metrics.json  run.sh
src/cfdb/: __init__.py  __main__.py  cli.py  schema.py  (+2 more)
tests/: conftest.py  test_agentbench.py  test_agentbench_coding.py  test_backlog_r6_batch.py  test_backlog_r7_batch.py  test_backlog_r8_batch.py  test_checker_scorer.py  test_cl_cd_extractor.py  test_cli.py  test_cli_compare.py  test_cli_data.py  test_cli_report_sweep.py  test_cli_v4.py  test_codex_r0_witnesses.py  test_codex_r1_witnesses.py  test_codex_r2_witnesses.py  test_codex_r3_witnesses.py  test_compare_runs.py  test_docker_backend.py  test_domain_defaults.py  test_dry_run_e2e.py  test_dvc_wrapper.py  test_e2e.py  test_failure_library.py  test_gallery.py  test_generic_adapter.py  test_io_oracle.py  test_judge_policy_extraction.py  test_ldc_real_path.py  test_local_backend.py  test_mesh_stats.py  test_metrics.py  test_metrics_hardening.py  test_ml_surrogate.py  test_multi_solver_report.py  test_naca0012.py  test_normalize.py  test_openfoam_adapter.py  test_openfoam_real_run.py  test_p3_hotfix.py  (+22 more)
(+236 files in other folders)
