[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cfd-benchmark"
version = "0.1.0"
description = "Open-source CFD solver benchmark platform"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "CFD-Benchmark Contributors" }]
dependencies = [
    "typer>=0.12,<1.0",
    "pydantic>=2.5,<3.0",
    "pyyaml>=6.0,<7.0",
    "jinja2>=3.1,<4.0",
    "numpy>=1.26,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "pyright>=1.1.350",
]

[project.scripts]
cfdb = "cfdb.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/cfdb"]

[tool.hatch.build.targets.wheel.force-include]
"src/cfdb/reporting/templates" = "cfdb/reporting/templates"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["UP017"]  # Keep timezone.utc per architecture doc §12.2

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/cfdb"]

[tool.pyright]
include = ["src/cfdb"]
typeCheckingMode = "basic"
